Nav contrast fix

--- a/app/index.css
+++ b/app/index.css
@@ -1552,13 +1552,13 @@ html[data-experimental="true"][data-theme="dark"] body {
 }
 
 html[data-experimental="true"][data-theme="light"] .tab-container {
-  background: rgba(252, 252, 255, 0.30) !important;
+  background: rgba(252, 252, 255, 0.6) !important;
   backdrop-filter: blur(48px);
   margin-bottom: 0;
 }
 
 html[data-experimental="true"][data-theme="dark"] .tab-container {
-  background: rgba(23, 23, 26, 0.30) !important;
+  background: rgba(23, 23, 26, 0.6) !important;
   backdrop-filter: blur(48px);
   margin-bottom: 0;
 }
